| Author: Jonathan Naumann                                               |
+------------------------------------------------------------------------+
|
| CHANGELOG
|
+



############################################################################################





Version 1.6
	- Version 1.6.0

Developer Version
	- 1.6.0 Development

Building Steps: 3197



 Version 1.6.0 Development
-----------------------------------------------------------------

 - bug #0000122: 

 - security fixed: 

 - bug fixed: Knowledgebase category deleting bug
 - bug fixed: Knowledgebase Drop-Down selection bug (if you are in a
              category and you want to create a new item, the category is not
              selected)
 - bug fixed: Knowledge relocate after saveing brings you now back to the
              selected category
 - bug fixed: Notebook display on desktop now with overflow
              

 - changed: Complete rewrite of the product manager as a base for the upcoming
            toendaCMS shop system.
 - changed: __NO_SPAM__ changed into [at]
 - changed: Default content text in imagegallery removed
 - changed: Framework rewrite to workl well with PHP5

 - added: New SEO format available: instead of using the old url format
          [www.domain.com/index.php?id=frontpage&lang=en]
          or [[www.domain.com/index.php/section/frontpage/lang/en]
          you can use now the new format
          [www.domain.com/index.php/en/frontpage.html].
          And the document url's changed into the content title.
          And the news url's changed into the news title.
 - added: Products page configuration now with multi-lingual support.
 - added: Mediabrowser for the texteditor has now a button to add a
          thumbnail of a image into the text. The images includes a link
          with a javascript window.
 - added: Lightbox (including script.aculo.us 1.5.1) for the images from the
          mediabrowser.


